HandleGetPublicProfile is implemented
